# p5rs

./: Cargo.toml  README.md  oldindex.html
p5rs-client/: package.json
p5rs-client/src/: App.tsx  Canvas.tsx  CodeLoader.tsx  DynamicScriptLoader.tsx  EditorComponent.tsx  MonacoEditor.tsx  ScriptLoaderJsWasm.tsx  types.ts
p5rs-server/: .gitignore  Cargo.toml
p5rs-server/src/: main.rs  types.rs
p5rs-wasm/: Cargo.toml  test.js
p5rs-wasm/src/: draw.rs  edit.rs  global.rs  lib.rs  mouse.rs  point.rs
src/: main.rs
static/: index.html
wasm_canvas/: Cargo.toml  READEME.md
wasm_canvas/src/: canvas.rs  lib.rs  types.rs  util.rs
