[package]
name = "p5rs-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
typeshare = "1.0.0"