[lib]
crate-type = ["cdylib"]

[package]
name = "p5rs_wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
js-sys = "0.3.77"
lazy_static = "1.5.0"
once_cell = "1.21.1"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77" , features = ["Document", "Window", "HtmlCanvasElement", "CanvasRenderingContext2d", "console", "HtmlDivElement"] }
